remove colons for consistency

--- a/usefulequations.tex
+++ b/usefulequations.tex
@@ -9,7 +9,7 @@
 
 \Large
 \begin{tabular}{p{2in}p{4in}}
-  Free Spectral Range: & $FSR = c/2 L$\\
+  Free Spectral Range & $FSR = c/2 L$\\
   Finesse & $ \mathcal{F} \approx 2 \pi/ T$ \\
   Cavity pole frequency & $f_c = \frac{1}{2}\frac{FSR}{\mathcal{F}}=\frac{cT}{8\pi L}$\\
   Airy Fringe & $P(\delta f) = \left (1 + \frac{4 \mathcal{F}^2}{\pi^2} \sin^2 [
@@ -23,7 +23,7 @@
   %HOM power & $P_{m,n} (\omega_1) = (\kappa_m(\omega_1)
   %\kappa_n(\omega_1) )^2 $ \\
   %Effect of astigmatism & $R'(\theta) = R \cos(\theta), \quad \mathrm{or}\;\;R / \cos(\theta)$ \\
-  g-factor: & $g = 1 - L/R$ \\
+  g-factor & $g = 1 - L/R$ \\
   One-way Gouy phase & $\phi_G = \arccos(g)$ 
 
 \end{tabular}
