--- a/usefulequations.tex
+++ b/usefulequations.tex
@@ -11,7 +11,8 @@
 \begin{tabular}{p{2in}p{4in}}
   Free Spectral Range & $FSR = c/2 L$\\
   Finesse & $ \mathcal{F} \approx 2 \pi/ T$ \\
-  Cavity pole frequency & $f_c = \frac{1}{2}\frac{FSR}{\mathcal{F}}=\frac{cT}{8\pi L}$\\
+  Cavity Pole Frequency & $f_c = \frac{1}{2}\frac{FSR}{\mathcal{F}}=\frac{cT}{8\pi L}$\\
+  Cavity Phase Gain & $g_\phi = \frac{2 \mathcal{F}}{\pi}\left[1+\left(f/f_c\right)^2\right]^{-1}$\\
   Airy Fringe & $P(\delta f) = \left (1 + \frac{4 \mathcal{F}^2}{\pi^2} \sin^2 [
   \pi \delta f / FSR ] \right)^{-1} $ \\
   %TEM00 power overlap & $P_0(\omega_1) = 4 \omega_0^2 \omega_1^2/
