--- a/usefulequations.tex
+++ b/usefulequations.tex
@@ -9,11 +9,11 @@
 
 \Large
 \begin{tabular}{p{2in}p{4in}}
-  Free Spectral Range & $FSR = c/2 L$\\
+  Free spectral range & $FSR = c/2 L$\\
   Finesse & $ \mathcal{F} \approx 2 \pi/ T$ \\
-  Cavity Pole Frequency & $f_c = \frac{1}{2}\frac{FSR}{\mathcal{F}}=\frac{cT}{8\pi L}$\\
-  Cavity Phase Gain & $g_\phi = \frac{2 \mathcal{F}}{\pi}\left[1+\left(f/f_c\right)^2\right]^{-1}$\\
-  Airy Fringe & $P(\delta f) = \left (1 + \frac{4 \mathcal{F}^2}{\pi^2} \sin^2 [
+  Cavity pole frequency & $f_c = \frac{1}{2}\frac{FSR}{\mathcal{F}}=\frac{cT}{8\pi L}$\\
+  Cavity phase gain & $g_\phi = \frac{2 \mathcal{F}}{\pi}\left[1+\left(f/f_c\right)^2\right]^{-1}$\\
+  Airy fringe & $P(\delta f) = \left (1 + \frac{4 \mathcal{F}^2}{\pi^2} \sin^2 [
   \pi \delta f / FSR ] \right)^{-1} $ \\
   %TEM00 power overlap & $P_0(\omega_1) = 4 \omega_0^2 \omega_1^2/
   %\left(\omega_0^2 + \omega_1^2 \right)^2 $ \\
@@ -24,8 +24,8 @@
   %HOM power & $P_{m,n} (\omega_1) = (\kappa_m(\omega_1)
   %\kappa_n(\omega_1) )^2 $ \\
   %Effect of astigmatism & $R'(\theta) = R \cos(\theta), \quad \mathrm{or}\;\;R / \cos(\theta)$ \\
-  g-factor & $g = 1 - L/R$ \\
-  One-way Gouy phase & $\phi_G = \arccos(g)$ 
+  g-parameter & $g = (1 - \frac{L}{R_1})(1 - \frac{L}{R_2})$ \\
+  Round trip Gouy phase & $\eta = \arccos(g)$ 
 
 \end{tabular}
 
