--- a/usefulequations.tex
+++ b/usefulequations.tex
@@ -12,7 +12,7 @@
   Free spectral range & $FSR = c/2 L$\\
   Finesse & $ \mathcal{F} \approx 2 \pi/ T$ \\
   Cavity pole frequency & $f_c = \frac{1}{2}\frac{FSR}{\mathcal{F}}=\frac{cT}{8\pi L}$\\
-  Cavity phase gain & $g_\phi = \frac{2 \mathcal{F}}{\pi}\left[1+\left(f/f_c\right)^2\right]^{-1}$\\
+  Resonant phase gain & $g_\phi = \frac{2 \mathcal{F}}{\pi}\left[1+\left(f/f_c\right)^2\right]^{-1}$\\
   Airy fringe & $P(\delta f) = \left (1 + \frac{4 \mathcal{F}^2}{\pi^2} \sin^2 [
   \pi \delta f / FSR ] \right)^{-1} $ \\
   %TEM00 power overlap & $P_0(\omega_1) = 4 \omega_0^2 \omega_1^2/
