fix g parameter stuff and add pdh slope

--- a/usefulequations.tex
+++ b/usefulequations.tex
@@ -24,8 +24,9 @@
   %HOM power & $P_{m,n} (\omega_1) = (\kappa_m(\omega_1)
   %\kappa_n(\omega_1) )^2 $ \\
   %Effect of astigmatism & $R'(\theta) = R \cos(\theta), \quad \mathrm{or}\;\;R / \cos(\theta)$ \\
-  g-parameter & $g = (1 - \frac{L}{R_1})(1 - \frac{L}{R_2})$ \\
-  Round trip Gouy phase & $\eta = \arccos(g)$ 
+  g-parameter & $g = \sqrt{(1 - \frac{L}{R_1})(1 - \frac{L}{R_2})}$ \\
+  One way Gouy phase & $\cos(\eta_{1/2}) = g$ \\
+  PDH error slope  & $P_0 \Gamma / f_c$
 
 \end{tabular}
 
