--- a/usefulequations.tex
+++ b/usefulequations.tex
@@ -10,8 +10,8 @@
 \Large
 \begin{tabular}{p{2in}p{4in}}
   Free spectral range & $FSR = c/2 L$\\
-  Finesse & $ \mathcal{F} \approx 2 \pi/ T$ \\
-  Cavity pole frequency & $f_c = \frac{1}{2}\frac{FSR}{\mathcal{F}}=\frac{cT}{8\pi L}$\\
+  Finesse & $ \mathcal{F} = \frac{\pi \sqrt g_{\mathrm{rt}}}{1-g_{\mathrm{rt}}} \approx 2 \pi/ T$ \\
+  Cavity pole frequency & $f_c = \frac{1}{2}\frac{FSR}{\mathcal{F}} \approx \frac{cT}{8\pi L}$\\
   Resonant phase gain & $g_\phi = \frac{2 \mathcal{F}}{\pi}\left[1+\left(f/f_c\right)^2\right]^{-1}$\\
   Airy fringe & $P(\delta f) = \left (1 + \frac{4 \mathcal{F}^2}{\pi^2} \sin^2 [
   \pi \delta f / FSR ] \right)^{-1} $ \\
@@ -24,9 +24,11 @@
   %HOM power & $P_{m,n} (\omega_1) = (\kappa_m(\omega_1)
   %\kappa_n(\omega_1) )^2 $ \\
   %Effect of astigmatism & $R'(\theta) = R \cos(\theta), \quad \mathrm{or}\;\;R / \cos(\theta)$ \\
-  g-parameter & $g = \sqrt{(1 - \frac{L}{R_1})(1 - \frac{L}{R_2})}$ \\
-  One way Gouy phase & $\cos(\eta_{1/2}) = g$ \\
-  PDH error slope  & $P_0 \Gamma / f_c$
+  g-parameter & $g = g_1g_2 = (1 - \frac{L}{R_1})(1 - \frac{L}{R_2})$ \\
+  One way Gouy phase & $\cos(\eta_{1/2}) = \sqrt g$ \\
+  PDH error slope  & $P_0 \Gamma / f_c$\\
+  Shot noise & $S_P = 2\hbar \omega P_0$\\
+  Thermal noise (Levin) &  $S_x = \frac{2k_bT}{\pi^2f^2}\frac{W_{\mathrm{diss}}}{F_0^2}$
 
 \end{tabular}
 
