thermal force noise

--- a/usefulequations.tex
+++ b/usefulequations.tex
@@ -28,7 +28,8 @@
   One way Gouy phase & $\cos(\eta_{1/2}) = \sqrt g$ \\
   PDH error slope  & $P_0 \Gamma / f_c$\\
   Shot noise & $S_P = 2\hbar \omega P_0$\\
-  Thermal noise (Levin) &  $S_x = \frac{2k_bT}{\pi^2f^2}\frac{W_{\mathrm{diss}}}{F_0^2}$
+  Thermal noise (Levin) &  $S_x = \frac{2k_bT}{\pi^2f^2}\frac{W_{\mathrm{diss}}}{F_0^2}$\\
+  Thermal noise (Force) & $S_F = 4kTm\frac{\omega_0}{Q}$\\
 
 \end{tabular}
 
