--- a/usefulequations.tex
+++ b/usefulequations.tex
@@ -28,7 +28,7 @@
   One way Gouy phase & $\cos(\eta_{1/2}) = \sqrt g$ \\
   PDH error slope  & $P_0 \Gamma / f_c$\\
   Shot noise & $S_P = 2\hbar \omega_0 P_0$\\
-  Free mass SQL & $S_x = \sqrt \frac{4 h}{m \omega^2}$\\
+  Free mass SQL & $S_x = \frac{4 h}{m \omega^2}$\\
   Thermal noise (Levin) &  $S_x = \frac{2k_bT}{\pi^2f^2}\frac{W_{\mathrm{diss}}}{F_0^2}$\\
   Thermal noise (Force, viscous damping) & $S_F = 4kTm\frac{\omega_0}{Q}$\\
 
